fix: add valid publish & version command messages

--- a/lerna.json
+++ b/lerna.json
@@ -1,10 +1,12 @@
 {
   "command": {
     "publish": {
-      "ignoreChanges": ["**/__fixtures__/**", "**/*.test.js", "**/*.md"]
+      "ignoreChanges": ["**/__fixtures__/**", "**/*.test.js", "**/*.md"],
+      "message": "chore: publish"
     },
     "version": {
-      "allowBranch": "main"
+      "allowBranch": "main",
+      "message": "chore: publish"
     }
   },
   "npmClient": "yarn",
